# llmcr

./: .gitignore  NOTE.md  README.md  docker-compose.yml  guideline.xml  llama-swap.yml  ragdb_backup.sql  run.sh  usecase.xml
_backups/0115/: ragdb_backup_full.sql  transform_history.json
_backups/0118/: ragdb_backup.sql
_backups/0122/: transform_history.json
_backups/0310/: ragdb_backup.sql
backups/0116/: ragdb_backup.sql  transform_history.json
backups/0118/: transform_history.json
backups/0122/: plain.index  ragdb_backup_postchunk.sql
backups/0122/eva/: results.json
evaluation/: evaluation.py  log_parser.py  prompt.py  pull_request_scrape.py  pull_requests.json  results.json
evaluation/data/: ci_analysis.txt  ci_evaluation.txt  evaluation_results.json  evaluation_results_gemini.json  evaluation_results_gemma.json  log_parse.txt  pull_requests.json  qa_analysis.txt  qa_evaluation.txt
faiss_service/: requirements.txt
faiss_service/app/: faiss_utils.py  main.py
faiss_service/app/data/: DOCUMENT.index  (+2 more)
ollama_service/: Dockerfile  start.sh
python-app/: .gitignore  README.md  chat_service.py  config.py  embedding_service.py  faiss_search.py  main.py  mariadb_store.py  pyproject.toml
python-app/service/: chatbot.py  database.py  embedding.py  faiss.py  rag.py
scripts/: evaluation.py  pull_request.json  pull_request_scrape.py
spring-app/: README.md  evaluation_history.json  pom.xml  query.txt  rag_history.json  run.sh  runapp.sh  runetl.sh  runevaluation.sh  spring-app.log 1  summaries.json
spring-app/database/: docker-compose.yml  run.sh
(+251 files in other folders)
